--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   }
 }
 </script>
+  <script async defer src="https://apis.google.com/js/api.js"></script>
+  <script async defer src="https://accounts.google.com/gsi/client"></script>
   <style>
     body {
       font-family: 'IBM Plex Sans', sans-serif;
