feat: Add feature announcements section
Introduces a new "Features" view to track upcoming and launched product features. This includes type definitions, mock data, and navigation integration for the new section.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
     body {
       font-family: 'IBM Plex Sans', sans-serif;
     }
+    [contenteditable][placeholder]:empty:before {
+        content: attr(placeholder);
+        color: #9ca3af; /* gray-400 */
+        pointer-events: none;
+        display: block;
+    }
+    .rich-text-content ul {
+        list-style-type: disc;
+        padding-left: 1.5rem;
+    }
+    .rich-text-content ol {
+        list-style-type: decimal;
+        padding-left: 1.5rem;
+    }
+    .rich-text-content strong, .rich-text-content b {
+        font-weight: 600;
+    }
+    .rich-text-content em, .rich-text-content i {
+        font-style: italic;
+    }
   </style>
 </head>
   <body class="bg-gray-100">
