--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   "imports": {
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/"
+    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
+    "xlsx": "https://esm.sh/xlsx@0.18.5"
   }
 }
 </script>
