--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     .rich-text-content em, .rich-text-content i {
         font-style: italic;
     }
+    .rich-text-content h1 { font-size: 2em; font-weight: 600; margin-top: 0.67em; margin-bottom: 0.67em; }
+    .rich-text-content h2 { font-size: 1.5em; font-weight: 600; margin-top: 0.83em; margin-bottom: 0.83em; }
+    .rich-text-content h3 { font-size: 1.17em; font-weight: 600; margin-top: 1em; margin-bottom: 1em; }
+    .rich-text-content h4 { font-size: 1em; font-weight: 600; margin-top: 1.33em; margin-bottom: 1.33em; }
+    .rich-text-content h5 { font-size: .83em; font-weight: 600; margin-top: 1.67em; margin-bottom: 1.67em; }
+    .rich-text-content h6 { font-size: .67em; font-weight: 600; margin-top: 2.33em; margin-bottom: 2.33em; }
+    .rich-text-content a { color: #2563eb; text-decoration: underline; }
     /* Gantt Chart Styles */
     .gantt-chart {
       --gantt-header-height: 60px;
