feat: Add font size selection to rich text editor
Introduces a font size dropdown to the rich text editor, allowing users to select predefined font sizes. This enhances the formatting capabilities of the editor by providing more granular control over text appearance.

Additionally, CSS styles have been adjusted to better reflect standard heading sizes and to support the new font size options.

--- a/index.html
+++ b/index.html
@@ -43,13 +43,20 @@
     .rich-text-content em, .rich-text-content i {
         font-style: italic;
     }
-    .rich-text-content h1 { font-size: 1em; font-weight: 600; margin-top: 0.67em; margin-bottom: 0.67em; }
-    .rich-text-content h2 { font-size: 1em; font-weight: 600; margin-top: 0.83em; margin-bottom: 0.83em; }
-    .rich-text-content h3 { font-size: 1em; font-weight: 600; margin-top: 1em; margin-bottom: 1em; }
+    .rich-text-content h1 { font-size: 2em; font-weight: 600; margin-top: 0.67em; margin-bottom: 0.67em; }
+    .rich-text-content h2 { font-size: 1.5em; font-weight: 600; margin-top: 0.83em; margin-bottom: 0.83em; }
+    .rich-text-content h3 { font-size: 1.17em; font-weight: 600; margin-top: 1em; margin-bottom: 1em; }
     .rich-text-content h4 { font-size: 1em; font-weight: 600; margin-top: 1.33em; margin-bottom: 1.33em; }
-    .rich-text-content h5 { font-size: 1em; font-weight: 600; margin-top: 1.67em; margin-bottom: 1.67em; }
-    .rich-text-content h6 { font-size: 1em; font-weight: 600; margin-top: 2.33em; margin-bottom: 2.33em; }
+    .rich-text-content h5 { font-size: 0.83em; font-weight: 600; margin-top: 1.67em; margin-bottom: 1.67em; }
+    .rich-text-content h6 { font-size: 0.67em; font-weight: 600; margin-top: 2.33em; margin-bottom: 2.33em; }
     .rich-text-content a { color: #2563eb; text-decoration: underline; }
+    .rich-text-content font[size="1"] { font-size: 0.75rem; }
+    .rich-text-content font[size="2"] { font-size: 0.875rem; }
+    .rich-text-content font[size="3"] { font-size: 1rem; }
+    .rich-text-content font[size="4"] { font-size: 1.25rem; }
+    .rich-text-content font[size="5"] { font-size: 1.5rem; }
+    .rich-text-content font[size="6"] { font-size: 2rem; }
+    .rich-text-content font[size="7"] { font-size: 2.5rem; }
     /* Gantt Chart Styles */
     .gantt-chart {
       --gantt-header-height: 60px;
