--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "xlsx": "https://esm.sh/xlsx@0.18.5",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "vite": "https://aistudiocdn.com/vite@^7.1.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3"
+    "xlsx": "https://esm.sh/xlsx@0.18.5"
   }
 }
 </script>
