--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         list-style-type: disc;
         padding-left: 1.5rem;
     }
+    .rich-text-content ul ul, .rich-text-content ol ul {
+        list-style-type: circle;
+    }
+    .rich-text-content ul ul ul, .rich-text-content ol ul ul {
+        list-style-type: square;
+    }
     .rich-text-content ol {
         list-style-type: decimal;
         padding-left: 1.5rem;
